Sequence overflow fix

--- a/style.css
+++ b/style.css
@@ -1483,6 +1483,7 @@ main {
     animation: disappear 2s forwards;
     animation-delay: 14s;
     background: #131313;
+    overflow: hidden;
     padding: 2% 0;
     height: 100vh;
     width: 100%;
